# Arteon

./: .gitignore  README.md  package-lock.json  package.json
Arteon-app/: package-lock.json  package.json
Arteon-app/backend/: generateAuthority.js  index.js
Arteon-app/backend/config/: sample-buyer-keypair.json
Arteon-app/backend/controllers/: board.controller.js  buyout.controller.js  comment.controller.js  pin.controller.js  user.controller.js  vault.controller.js
Arteon-app/backend/data/: authority-wallet.json
Arteon-app/backend/middleware/: verifyToken.js
Arteon-app/backend/models/: board.models.js  buyoutOffer.models.js  comment.models.js  follow.models.js  fractionalization.models.js  like.model.js  pin.models.js  save.model.js  user.models.js
Arteon-app/backend/routes/: board.route.js  buyout.route.js  pin.route.js  user.route.js  vault.route.js
Arteon-app/backend/tests/: ALL_API_ENDPOINTS.md  BUYOUT_API_DOCUMENTATION.md
Arteon-app/backend/utils/: appWallet.js  authorityWallet.js  connectDB.js  fractionalizeVaultService.js  seed.js  vaultService.js
Arteon-app/client/: package-lock.json  package.json
Arteon-app/client/src/: App.jsx  app.css  main.jsx
Arteon-app/smart-contract/: .gitignore  Anchor.toml
Arteon-app/smart-contract/programs/smart-contract/: Cargo.toml
Arteon-app/smart-contract/programs/smart-contract/src/: State.rs  constant.rs  error.rs  lib.rs
Arteon-app/smart-contract/programs/smart-contract/src/instructions/: buyout.rs  fractionalize.rs  initialize_vault.rs  mod.rs  redeem.rs  vote_buyout.rs
(+40 files in other folders)
